--- a/app/views/directions/_form.html.erb
+++ b/app/views/directions/_form.html.erb
@@ -14,9 +14,9 @@
   </div>
 
  <div class="control-group">
-    <%= f.label :isLimit, :class => 'control-label' %>
+    <%= f.label :is_limit, :class => 'control-label' %>
     <div class="controls">
-      <%= f.check_box :isLimit, :class => 'check_box' %>
+      <%= f.check_box :is_limit, :class => 'check_box' %>
     </div>
   </div>
 
