--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,5 +1,6 @@
 
 <%= render :partial => 'tasks/top_siderbar' %> 
+<%= render :partial => 'tasks/alert' %>
 <div class="span8 offset1">
 
   <table class="table table-striped">
