--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -8,9 +8,9 @@
   </div>
 
   <div class="control-group">
-    <%= f.label :isDone, :class => 'control-label' %>
+    <%= f.label :is_done, :class => 'control-label' %>
     <div class="controls">
-      <%= f.check_box :isDone, :class => 'check_box' %>
+      <%= f.check_box :is_done, :class => 'check_box' %>
     </div>
   </div>
 
